@@ -58,6 +58,7 @@ Changes since Asterisk 1.4-beta was branched:
   * Added the srvlookup option to iax.conf
   * Added 'E' and 'V' commands to ExternalIVR.
   * Added 'DBDel' and 'DBDelTree' manager commands.
+  * Added 'o' and 'X' options to Chanspy.
 
 AMI - The manager (TCP/TLS/HTTP)
 --------------------------------
